# movie-finder-backend

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  INTEGRATION.md  Jenkinsfile  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml
.claude/commands/: create-issue.md  implement.md  review-pr.md  session-start.md
.codex/: config.toml
.cursor/rules/: architect.mdc  debugger.mdc  developer.mdc  project.mdc  python.mdc
.devcontainer/: devcontainer.json
.gemini/: settings.json
.gemini/skills/architect/: SKILL.md
.gemini/skills/debugger/: SKILL.md
.gemini/skills/developer/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml
.junie/: guidelines.md
ai-context/: README.md
ai-context/prompts/: implement.md  research.md
alembic/: env.py  script.py.mako
alembic/versions/: 20260404_000001_initial_backend_schema.py  960b235da743_initiating_missing_sql_schema.py
app/: README.md  main.py  pyproject.toml
app/api/: deps.py
app/api/routes/: auth.py  chat.py  feedback.py
app/core/: config.py  dependencies.py  logger.py  security.py
app/models/: chat.py  feedback.py  user.py
app/schemas/: chat.py  feedback.py  user.py
app/services/: agent.py  imdb.py  qdrant.py
app/src/app/: __init__.py  config.py  dependencies.py  limiting.py  logging_config.py  main.py
app/src/app/auth/: middleware.py  models.py
app/src/app/models/: user.py
app/src/app/routers/: auth.py  chat.py
app/src/app/session/: store.py
app/tests/: conftest.py  test_auth.py  test_chat.py  test_config.py  test_health.py  test_runtime_support.py  test_session_store.py
chain/: docker-compose.yml  pyproject.toml
deploy/: provision.sh
docker/postgres/init/: 01-create-test-database.sql
rag_ingestion/: eda.py  ingest.py
scripts/: db-backup.sh  db-restore.sh  migrate_sqlite_to_postgres.py  setup.sh
test-results/: results.xml
tests/: conftest.py  manual_agent_mocked.py  manual_agent_test.py  test_agent_phases.py  test_auth.py  test_imdb_service.py
