[project]
name = "movie-finder-app"
version = "0.1.0"
description = "FastAPI application layer for Movie Finder"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "movie-finder-chain",
    "fastapi[standard]>=0.115.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
]

[dependency-groups]
lint = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
]

[tool.uv]
default-groups = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
movie-finder-chain = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
# jose stubs are incomplete; suppress misc errors on jwt calls
module = "app.auth.middleware"
disable_error_code = ["misc", "no-any-return"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
